variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: value update is not a member of Boolean
  if (estSurBiscuit()=true) {
      ^RunHalf:7: error: value update is not a member of Boolean
  if  (estSurOrange()=true){
       ^